# xxHash

./: conanfile.py
cmake_unofficial/: CMakeLists.txt
conan/: conanfile.py
visual_studio/: .gitignore  xxHash.sln  xxHash.vcxproj
